[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "argon"
version = "0.0.2"
authors = [
  { name = "Minkx1", email = "zakalata.mark@gmail.com" },
]
description = "A python package that features easy interface for creating CLI-based applications and functions."
readme = "README.md"
requires-python = ">=3.10"
classifiers = [
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent",
    "Intended Audience :: Developers",
    "Topic :: Software Development :: Libraries :: Python Modules",
]

license = "MIT"
license-files = ["LICEN[CS]E*"]

[project.urls]
Homepage = "https://github.com/Minkx1/Argon"
Issues = "https://github.com/Minkx1/Argon/issues"
